@@ -51,5 +51,11 @@ public class LogicalDBConstants
     public static final int SIGTR = 103;
     public static final int FHCRC = 104;
     public static final int TIGM_CELLLINE = 121;
+    public static final int EUCOMM_GTCELLLINE = 128;
+    public static final int EUCOMM_GTTAG = 129;
     public static final int NCBI_GENEMODEL_EVIDENCE = 139;
+    public static final int RULEY = 149;	
+    public static final int RULEY_CELLLINE = 150;
+    public static final int ISHIDA = 151;
+    public static final int ISHIDA_CELLLINE = 152;
 }
